revert overflow scrolling, buggy on windows

--- a/src/raw/editor.css
+++ b/src/raw/editor.css
@@ -52,11 +52,3 @@ body {
   border-right: 12px solid transparent;
   border-top: 17px solid #d77d2d;
 }
-
-/*
-fix scrolling for safari / iOS
-*/
-
-#editor-wrapper .ace_scroller {
-    overflow:scroll !important; -webkit-overflow-scrolling:touch !important;
-}
